# django_template

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yaml  dump.sh  entrypoint.sh  gunicorn.config.py  pyproject.toml  pytest.ini
.github/workflows/: testing.yaml
src/: config.py  dump_database.py  settings.py  tasks.py  urls.py
src/logging_settings/: logging_config.py
src/management/commands/: run_scheduler.py
src/tests/: test.py
